# MiniRedis

./: CMakeLists.txt
include/: lexer.h  parser.h
src/: client.cpp  lexer.cpp  parser.cpp  server.cpp
